[package]
name = "atsamd-usb-uart"
version = "0.1.0"
authors = ["Ian Rees <code@ianrees.nz>"]
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
edition = "2018"

[dependencies]
# Using bbqueue because it gives a low-cost method to attempt a USB write,
# without removing data from the structure, where heapless::spsc would seem to
# require an intermediate buffer.
bbqueue = {version = "0.4.12", features = ["thumbv6"]}

cortex-m = "~0.6"

# TODO Remove defmt before publishing?
defmt = "0.2.0"
defmt-rtt = "0.2.0"

usb-device = "0.2.7"

[dependencies.atsamd-hal]
# Under-development version
default-features = false
git = "https://github.com/ianrrees/atsamd"
branch = "for-work"
# path = '/home/irees/Projects/20201112 - atsamd-rs/hal'
features = [
    "dma", # Support for the DMAC
    "samd21g", # Need to tell HAL which chip we're targeting
    "unproven", # Required to read GPIO pins, AFAIK nothing else
    "usb", # Build in USB support
    "samd21g-rt",
]

[features]
default = [
    "defmt-default",
]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []