[package]
name = "atsamd-usbd-uart"
version = "0.1.1"
authors = ["Ian Rees <code@ianrees.nz>"]
keywords = ["no-std", "arm", "cortex-m", "atsamd", "usb", "embedded-hal"]
edition = "2021"

[dependencies]
# Using bbqueue because it gives a low-cost method to attempt a USB write,
# without removing data from the structure, where heapless::spsc would seem to
# require an intermediate buffer.
bbqueue = {version = "0.4.12", features = ["thumbv6"]}

cortex-m = "~0.6"

defmt = "0.3"

usb-device = "0.3.1"

[dependencies.atsamd-hal]
features = ["usb"]
